<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Scrumtinize</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="please_wait">Please Wait…</string>
    <string name="please_enter_password">Please enter a password.</string>
    <string name="tv_signup_text">Enter your name, e-mail and password to register with us.</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="please_enter_email">Please enter an email address.</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>
    <string name="add_board_button">Add board button</string>
    <string name="add_board_title">Add Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="no_boards_available">No boards available!</string>
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel" tools:ignore="ButtonCase"> CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>

    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_member">Select Member</string>
    <string name="image_contentDescription">Content Image</string>
    <string name="zero_number">0</string>
    <string name="card_weight">Card Weight</string>
    <string name="add_weight">add weight</string>
    <string name="remove_weight">remove weight</string>
    <string name="card_details">Card Details</string>
    <string name="default_notification_channel_id">scrumtinize_notification_channel</string>
    <string name="enter_email">Enter your email address to recover your account.</string>
    <string name="password_recover">Password Recover</string>
    <string name="send">SEND</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_e_mail_and_password_to_sign_in">Enter your e-mail and password to sign in.</string>
    <string name="continue_with_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE</string>
    <string name="need_an_account">Need an account?</string>
    <string name="or">OR</string>
    <string name="sign_up_underline"><u>SIGN UP</u></string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="action_settings">Settings</string>
    <string name="your_web_client_id">"AIzaSyBxweVTiR7XWtsKw8q1u5uF2GPsA3TKVWk"</string>
    <string name="oauth_google_cloud_key" tools:ignore="TypographyDashes">298232093304-7cgfjj3950vi1popgb0vitc86bchn8q4.apps.googleusercontent.com</string>
    <string name="facebook_app_id">717500726337438</string>
    <string name="fb_login_protocol_scheme">fb717500726337438</string>
    <string name="facebook_client_token">7526d1d801ac72acc242ba2075f96913</string>
    <string name="finish_cart">Finished</string>
    <string name="unfinish_cart">Unfinish</string>
    <string name="description">Description</string>
    <string name="about">About</string>
    <string name="standard_about_text">"Welcome to <b>Scrumtineze App</b>, our project management tool! We are excited to bring you our beta version, designed to streamline your work processes and increase productivity. This application offers a user-friendly interface that allows you to manage your projects, tasks, and team members with ease. With features such as task assignment, deadline tracking, and progress monitoring, you can stay on top of your work and ensure that everything gets done on time. We are constantly working to improve our app and welcome your feedback. \n Join us in our journey to revolutionize the way work gets done!" \n This project its on beta version and its functionalities requires proper internet connection.</string>
    <string name="developer">Developed by <a href="https://github.com/bernardosan">@bernardosan</a></string>
    <string name="groups">Groups</string>
    <string name="add_group">Add Group</string>
    <string name="group_name">Group Name</string>
    <string name="exit_group">Exit</string>
    <string name="enter_valid_group_name_error">Enter a valid group name and key</string>
    <string name="search_group">Search Group</string>
    <string name="group_id">Group Id</string>
    <string name="group_key">Group Key</string>
    <string name="group_members_size">Group Size</string>
    <string name="need_access_external_storage">needs to access your external storage</string>
</resources>