<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity"
    android:background="@drawable/ic_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:text="@string/password_recover"
        android:textColor="@color/primary_text_color"
        android:theme="@style/ToolbarTheme">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="50dp"
        android:text="@string/enter_email"
        android:textColor="@color/secondary_text_color"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/signup_cardview_rounded_shape"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:autofillHints="" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:background="@drawable/shape_btn_rounded"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>