<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgColor"
    tools:context=".activities.CardDetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_card_details_activity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleTextColor="@color/white"
                app:popupTheme="@style/Theme.PopUpOverlay"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_details_content_padding">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/card_details_cv_card_name_marginBottom"
                android:elevation="@dimen/card_view_elevation"
                app:cardCornerRadius="@dimen/card_view_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/card_details_content_padding">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_name_card_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:hint="@string/hint_card_name"
                            android:inputType="text"
                            android:textSize="@dimen/et_text_size"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/card_details_cv_card_name_marginBottom"
                android:elevation="@dimen/card_view_elevation"
                app:cardCornerRadius="@dimen/card_view_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/card_details_content_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/card_weight"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/card_details_label_text_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_select_card_weight"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/card_details_value_marginTop"
                            android:layout_weight="5"
                            android:gravity="center"
                            android:padding="@dimen/card_details_value_padding"
                            android:text="@string/zero_number"
                            android:textColor="@color/primary_text_color"
                            android:textSize="@dimen/card_details_label_text_size"/>

                        <ImageButton
                            android:id="@+id/ib_add_weight"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/card_details_value_marginTop"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:padding="@dimen/card_details_weight_padding"
                            android:src="@drawable/ic_add_weight"
                            android:soundEffectsEnabled="true"
                            android:clickable="true"
                            android:contentDescription="@string/add_weight"
                            tools:ignore="KeyboardInaccessibleWidget" />

                        <ImageButton
                            android:id="@+id/ib_remove_weight"
                            android:padding="@dimen/card_details_weight_padding"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginTop="@dimen/card_details_value_marginTop"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_remove_weight"
                            android:soundEffectsEnabled="true"
                            android:clickable="true"
                            android:contentDescription="@string/remove_weight"
                            tools:ignore="KeyboardInaccessibleWidget" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/card_details_cv_card_name_marginBottom"
                android:elevation="@dimen/card_view_elevation"
                app:cardCornerRadius="@dimen/card_view_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/card_details_content_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_color"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/card_details_label_text_size" />

                    <TextView
                        android:id="@+id/tv_select_label_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_details_value_marginTop"
                        android:padding="@dimen/card_details_value_padding"
                        android:text="@string/select_color"
                        android:textColor="@color/primary_text_color"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_details_members_label_marginTop"
                        android:text="@string/members"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/card_details_label_text_size" />

                    <TextView
                        android:id="@+id/tv_select_members"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_details_value_marginTop"
                        android:padding="@dimen/card_details_value_padding"
                        android:text="@string/select_members"
                        android:textColor="@color/primary_text_color"
                        android:visibility="visible"
                        tools:visibility="gone" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_selected_members_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_details_value_marginTop"
                        android:visibility="gone"
                        tools:visibility="visible"
                        tools:listitem="@layout/item_selected_member"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="5"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_details_members_label_marginTop"
                        android:text="@string/due_date"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/card_details_label_text_size" />

                    <TextView
                        android:id="@+id/tv_select_due_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_details_value_marginTop"
                        android:padding="@dimen/card_details_value_padding"
                        android:text="@string/select_due_date"
                        android:textColor="@color/primary_text_color" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_update_card_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/card_details_update_btn_marginTop"
                        android:background="@drawable/shape_btn_rounded"
                        android:text="@string/update"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btn_text_size"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

</LinearLayout>